versioned_docs/version-2025.1.1/sala/bloco_2/sala_8-2.mdx
---
slug: /sala/sala_8-2
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Sala 8-2",
  base: "Bloco 2",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: [
        {
          subject: "Filosofia I",
          size: 1,
          teachers: [
            "José Provetti Júnior"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Língua estrangeira - Inglês",
          size: 2,
          teachers: [
            "Yohana Diel Saheli"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "08:20 - 09:10",
          color: ""
        },
        {
          subject: "Geografia I",
          size: 2,
          teachers: [
            "Jhones Donizetti Mendes"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "Educação postural e Segurança no trabalho",
          size: 1,
          teachers: [
            "Tatiane Martinazzo Portz"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Literatura e Produção Textual I",
          size: 2,
          teachers: [
            "Pedro Leites Junior"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "08:20 - 09:10",
          color: ""
        },
        {
          subject: "Zootecnia Geral",
          size: 2,
          teachers: [
            "Roberto Haruyoshi Ito"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "10:15 - 11:05",
          color: ""
        },
        {
          subject: "Filosofia I",
          size: 1,
          teachers: [
            "José Provetti Júnior"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "13:10 - 14:00",
          color: ""
        },
        {
          subject: "Cultura e Cinema Nacional I",
          size: 1,
          teachers: [
            "Josiane Paula Maltauro"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "14:00 - 14:50",
          color: ""
        },
        {
          subject: "Educação ambiental e desenvolvimento sustentável",
          size: 4,
          teachers: [
            "Karina Dias Espartosa"
          ],
          classroom: "Sala 8-2",
          students: [
            "BIO_ESPECIAL_2"
          ],
          time: "19:00 - 19:50",
          color: ""
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "Sociologia I",
          size: 1,
          teachers: [
            "Karianny Aparecida Gerotto Del Mouro"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "09:25 - 10:15",
          color: ""
        },
        {
          subject: "Artes I",
          size: 2,
          teachers: [
            "Josiane Paula Maltauro"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "Sociologia I",
          size: 1,
          teachers: [
            "Karianny Aparecida Gerotto Del Mouro"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Agricultura geral",
          size: 2,
          teachers: [
            "Elias Franco"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "08:20 - 09:10",
          color: ""
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "Língua Portuguesa I",
          size: 1,
          teachers: [
            "Michelli Cristina Galli"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "07:30 - 08:20",
          color: ""
        },
        {
          subject: "Agroecologia e Desenvolvimento Rural Sustentável",
          size: 2,
          teachers: [
            "Tatiane Martinazzo Portz"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "08:20 - 09:10",
          color: ""
        },
        {
          subject: "Matemática I",
          size: 2,
          teachers: [
            "Elizangela Mendes Pereira"
          ],
          classroom: "Sala 8-2",
          students: [
            "AGO2025"
          ],
          time: "10:15 - 11:05",
          color: ""
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Sala 8-2

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
